update color theme.

--- a/assets/css/theme-color/ppgcc-theme.css
+++ b/assets/css/theme-color/ppgcc-theme.css
@@ -238,6 +238,10 @@ Author URI : http://www.markups.io/
   color: #CF000F;
 }
 
+.cronog {
+  color: #ffffff;
+}
+
 .mu-send-msg-btn:hover,
 .mu-send-msg-btn:focus,
 .mu-about-icon-box,
