--- a/assets/css/theme-color/red-theme.css
+++ b/assets/css/theme-color/red-theme.css
@@ -12,8 +12,8 @@ Author URI : http://www.markups.io/
 .mu-simplefilter li.active,
 .mu-team-content-single:hover {
   background: #ee4532;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #B06AB3, #ee4532);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #B06AB3, #ee4532); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(to right, rgb(216, 139, 158), #ee4532);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, rgb(216, 139, 158), #ee4532); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .mu-heading-title>span,
