--- a/assets/css/theme-color/red-theme.css
+++ b/assets/css/theme-color/red-theme.css
@@ -36,6 +36,7 @@ Author URI : http://www.markups.io/
   color: #ee4532;
 }
 
+
 .mu-testimonial-slide .slick-dots li button:hover,
 .mu-testimonial-slide .slick-dots li button:focus,
 .mu-testimonial-slide .slick-dots li.slick-active button {
@@ -45,5 +46,12 @@ Author URI : http://www.markups.io/
 .mu-contact-form .form-control:focus {
   border: 1px solid #ee4532;    
 } 
+
+
+@media (max-width: 653px){
+  #logo > img {
+    width: 25%;
+    height: auto;
+  }
 
 
